[gd_scene load_steps=8 format=2]

[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://img/image-removebg-preview (4).png" type="Texture" id=2]
[ext_resource path="res://img/blue-arrow-button-png (1).png" type="Texture" id=3]
[ext_resource path="res://img/blue-arrow-button-png.webp" type="Texture" id=4]
[ext_resource path="res://escenas/SeleccionarEstadio.gd" type="Script" id=5]
[ext_resource path="res://campos/CampoFutbol.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="PanelBola" type="Panel" parent="."]
margin_left = 34.0
margin_top = 36.0
margin_right = 691.0
margin_bottom = 425.0
rect_scale = Vector2( 1.46595, 1.33555 )

[node name="Label" type="Label" parent="PanelBola"]
margin_left = 220.335
margin_top = 24.7089
margin_right = 440.335
margin_bottom = 62.7089
custom_fonts/font = SubResource( 1 )
text = "SELECCIONA UN ESTADIO"

[node name="BotonSiguiente" type="TextureButton" parent="PanelBola"]
margin_left = 587.333
margin_top = 172.963
margin_right = 1523.33
margin_bottom = 1108.96
rect_scale = Vector2( 0.056536, 0.056536 )
texture_normal = ExtResource( 4 )

[node name="BotonAnterior" type="TextureButton" parent="PanelBola"]
margin_left = 21.1467
margin_top = 172.214
margin_right = 957.147
margin_bottom = 1108.21
rect_scale = Vector2( 0.0545878, 0.0595072 )
texture_normal = ExtResource( 3 )

[node name="BotonConfirmar" type="TextureButton" parent="PanelBola"]
margin_left = 243.528
margin_top = 318.221
margin_right = 777.528
margin_bottom = 785.221
rect_scale = Vector2( 0.324151, 0.197624 )
texture_normal = ExtResource( 2 )

[node name="VistaPersonajePlayer" type="Sprite" parent="PanelBola"]
position = Vector2( 330.843, 204.41 )
scale = Vector2( 0.322488, 0.298199 )
texture = ExtResource( 6 )
